# gtk-version-inkDraw

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  to-do.md
src/: canvas.cpp  canvas.hpp  drawingLogic.cpp  drawingLogic.hpp  main.cpp  penSettingsPanel.cpp  penSettingsPanel.hpp  settingPanel.cpp  settingPanel.hpp  ui.cpp  ui.hpp
